--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/_Game/Maps/DefaultMap.DefaultMap
-EditorStartupMap=/Game/_Game/Maps/DefaultMap.DefaultMap
+GameDefaultMap=/Game/EnvironmentPack3/Maps/DemoMap4.DemoMap4
+EditorStartupMap=/Game/EnvironmentPack3/Maps/DemoMap4.DemoMap4
+GlobalDefaultGameMode=/Game/_Game/GameModes/BP_ShooterGameMode.BP_ShooterGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
