--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,12 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
+#Assets
+Content/Polar/*
+Content/ParagonTwinblast/*
+Content/Maps/*
+Content/EnvironmentPack3/*
+
+#Publish
+Publish/*
